tests/ui/match/option-result-type-param-mismatch-13466.stderr
error[E0308]: mismatched types
  --> $DIR/option-result-type-param-mismatch-13466.rs:12:9
   |
LL |     let _x: usize = match Some(1) {
   |                           ------- this expression has type `Option<{integer}>`
LL |         Ok(u) => u,
   |         ^^^^^ expected `Option<{integer}>`, found `Result<_, _>`
   |
   = note: expected enum `Option<{integer}>`
              found enum `Result<_, _>`

error[E0308]: mismatched types
  --> $DIR/option-result-type-param-mismatch-13466.rs:18:9
   |
LL |     let _x: usize = match Some(1) {
   |                           ------- this expression has type `Option<{integer}>`
...
LL |         Err(e) => panic!(e)
   |         ^^^^^^ expected `Option<{integer}>`, found `Result<_, _>`
   |
   = note: expected enum `Option<{integer}>`
              found enum `Result<_, _>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
